--- a/frontend/public/css/style.css
+++ b/frontend/public/css/style.css
@@ -1,98 +1,193 @@
 :root {
-	--blue:  #3DB2FF;
-	--lightpink: #FAEFEF;
-	--orange: #fea02f;
+  --blue: #3db2ff;
+  --lightpink: #faefef;
+  --orange: #fea02f;
+}
+
+html {
+  height: 100%;
 }
 
 body {
-	background: rgb(255,148,23);
-	background: linear-gradient(45deg, var(--orange), var(--blue)) no-repeat;
-	min-height: 100vh;
+  background: #eeeeee;
+  box-sizing: border-box;
+  margin: 0;
+  min-height: 100%;
+  padding: 0;
+  position: relative;
 }
 
-a {
-	color: white;
+#root {
+  display: flex;
+  flex-direction: column;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
+a,
 a:hover {
-	color: white;
-	text-decoration: none;
-
+  color: white;
+  text-decoration: none;
 }
+
+button {
+  cursor: pointer;
+  display: block;
+}
+
+/* NavBar */
 
 .navigation-bar {
-	padding: 3% 12% 7% 12%;
-	background-color: none;
-	display: flex;
-	justify-content: space-between;
+  background: linear-gradient(45deg, var(--orange), var(--blue)) no-repeat;
+  box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.25);
+  display: flex;
+  justify-content: space-between;
+  padding: 2% 12% 2% 12%;
+}
+
+.navigation-bar a,
+.navigation-bar a:hover {
+  color: white;
+  text-decoration: none;
 }
 
 .logo {
-	font-family: 'Ubuntu', sans-serif;
-	font-weight: bold;
-	font-size: 2.5rem;
+  font-family: "Ubuntu", sans-serif;
+  font-size: 2.5rem;
+  font-weight: bold;
 }
 
 .nav-list {
-	list-style: none;
-	display: flex;
-	justify-content: space-around;
-	align-items: center;
-	margin: 0;
-	padding: 0;
-	
+  align-items: center;
+  display: flex;
+  justify-content: space-around;
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 .nav-item {
-	margin: 0 2rem;
+  margin: 0 2rem;
 }
 
+/* Home Page */
+
 .home-section {
-	padding: 3% 12% 3% 12%;
-	height: 100%;
-	display: flex;
-	align-items: center;
+  align-items: center;
+  display: flex;
+  height: 100%;
+  padding: 3% 12% 3% 12%;
 }
 
 .home-left-section {
-	width: 50%;
+  width: 50%;
 }
 
 .home-right-section {
-	width: 50%;
-	display: flex;
-	justify-content: center;
-	align-items: center;
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  width: 50%;
 }
 
-.createButton {
-	background-color: var(--orange);
-	text-decoration: none;
-	border: none;
-	padding: 4% 9%;
-	font-weight: bold;
-	font-size: 2rem;
-	border-radius: 10rem;
+.create-button {
+  background-color: var(--orange);
+  border-radius: 3rem;
+  border: none;
+  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.25);
+  color: white;
+  font-size: 2rem;
+  font-weight: bold;
+  padding: 1rem 2rem;
+  text-decoration: none;
 }
 
 .big-heading {
-	color: white;
-	font-size: 3rem;
-	line-height: 1.5;
-	font-weight: 900;
+  font-size: 3rem;
+  font-weight: 900;
+  line-height: 1.5;
 }
+
+/* Create Poll */
+.create-form {
+  padding: 3% 12% 3% 12%;
+}
+
+.create-label {
+  font-weight: bold;
+  margin: 1rem 0 0 0;
+}
+
+.submit {
+  background-color: var(--orange);
+  border-radius: 3rem;
+  border: none;
+  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.25);
+  color: white;
+  font-size: 1.5rem;
+  font-weight: bold;
+  margin: 0 auto;
+  padding: 1% 3%;
+  text-decoration: none;
+}
+
+.add {
+  background-color: var(--orange);
+  border-radius: 3rem;
+  border: none;
+  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.25);
+  color: white;
+  font-size: 1rem;
+  font-weight: bold;
+  margin: 1rem 0;
+  padding: 1% 3%;
+  text-decoration: none;
+}
+
+.create-form input {
+  border-radius: 4px;
+  border: 1px solid #ccc;
+  box-shadow: inset 0 1px 1px rgb(0, 0, 0, 0.25);
+  height: 1.5rem;
+  margin-right: 0.5rem;
+  margin: 0.5rem 0;
+  padding: 0.25rem 0.75rem;
+  width: 100%;
+}
+
+.option input {
+  width: 50%;
+}
+
+.remove {
+  align-items: center;
+  background-color: lightgrey;
+  border-radius: 4px;
+  border: none;
+  display: flex;
+  height: 2rem;
+  justify-content: center;
+  width: 2rem;
+}
+
+.option {
+  align-items: center;
+  display: flex;
+}
+
+/* Footer */
 
 footer {
-	color: white;
-	position: absolute;
-	bottom: 0;
-	width: 100%;
-	text-align: center;
+  bottom: 0;
+  position: absolute;
+  text-align: center;
+  width: 100%;
 }
 
+/* Loader */
+
 .loader {
+  border-radius: 50%;
+  border: 3rem solid gray;
   height: 1rem;
   width: 1rem;
-  border: 3rem solid gray;
-  border-radius: 50%;
 }
