--- a/frontend/public/css/style.css
+++ b/frontend/public/css/style.css
@@ -1,3 +1,7 @@
+:focus {
+  outline: none;
+}
+
 :root {
   --blue: #3db2ff;
   --lightpink: #faefef;
@@ -6,10 +10,12 @@
 
 html {
   height: 100%;
+  width: 100%;
 }
 
 body {
-  background: #eeeeee;
+  width: 100%;
+  background: #efefef;
   box-sizing: border-box;
   margin: 0;
   min-height: 100%;
@@ -18,9 +24,13 @@ body {
 }
 
 #root {
-  display: flex;
-  flex-direction: column;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+button {
+  cursor: pointer;
+  display: block;
 }
 
 a,
@@ -29,25 +39,16 @@ a:hover {
   text-decoration: none;
 }
 
-button {
-  cursor: pointer;
-  display: block;
-}
-
 /* NavBar */
 
-.navigation-bar {
+.navbar {
   background: linear-gradient(45deg, var(--orange), var(--blue)) no-repeat;
-  box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.25);
   display: flex;
   justify-content: space-between;
-  padding: 2% 12% 2% 12%;
-}
-
-.navigation-bar a,
-.navigation-bar a:hover {
-  color: white;
-  text-decoration: none;
+  padding: 1rem 3rem;
+  align-items: center;
+  position: relative;
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.25);
 }
 
 .logo {
@@ -57,16 +58,71 @@ button {
 }
 
 .nav-list {
-  align-items: center;
-  display: flex;
-  justify-content: space-around;
-  list-style: none;
   margin: 0;
   padding: 0;
+  display: flex;
 }
 
 .nav-item {
-  margin: 0 2rem;
+  list-style: none;
+}
+
+.nav-item a {
+  display: block;
+  color: white;
+  text-decoration: none;
+  padding: 0.5rem 1rem;
+  margin: 0 1rem;
+  border: none;
+  border-radius: 2rem;
+}
+
+.nav-item a:hover {
+  background-color: white;
+  color: var(--blue);
+}
+
+.hamburger {
+  display: none;
+}
+
+@media (max-width: 750px) {
+  .logo {
+    margin: 1rem 1rem;
+  }
+
+  .hamburger {
+    display: block;
+    color: white;
+    font-size: 2.5rem;
+    position: absolute;
+    right: 1rem;
+    top: 1.25rem;
+  }
+
+  .navbar {
+    padding: 0;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .nav-list {
+		display: none;
+    width: 100%;
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .nav-item a {
+    padding: 0.5rem 0;
+    margin: 0;
+    width: 100%;
+    border-radius: 0;
+  }
+
+  .active {
+    display: flex;
+  }
 }
 
 /* Home Page */
@@ -93,7 +149,7 @@ button {
   background-color: var(--orange);
   border-radius: 3rem;
   border: none;
-  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.25);
+  box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.25);
   color: white;
   font-size: 2rem;
   font-weight: bold;
@@ -105,6 +161,18 @@ button {
   font-size: 3rem;
   font-weight: 900;
   line-height: 1.5;
+}
+
+@media (max-width: 750px) {
+  .home-section {
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .home-left-section,
+  .home-right-section {
+    width: 100%;
+  }
 }
 
 /* Create Poll */
@@ -126,7 +194,7 @@ button {
   font-size: 1.5rem;
   font-weight: bold;
   margin: 0 auto;
-  padding: 1% 3%;
+  padding: 0.75rem 1.5rem;
   text-decoration: none;
 }
 
@@ -136,20 +204,19 @@ button {
   border: none;
   box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.25);
   color: white;
-  font-size: 1rem;
+  font-size: 0.75rem;
   font-weight: bold;
   margin: 1rem 0;
-  padding: 1% 3%;
+  padding: 0.75rem 1.5rem;
   text-decoration: none;
 }
 
 .create-form input {
   border-radius: 4px;
   border: 1px solid #ccc;
-  box-shadow: inset 0 1px 1px rgb(0, 0, 0, 0.25);
+  box-shadow: 0 2px 5px #ccc;
   height: 1.5rem;
-  margin-right: 0.5rem;
-  margin: 0.5rem 0;
+  margin: 0.5rem 0.5rem 0.5rem 0;
   padding: 0.25rem 0.75rem;
   width: 100%;
 }
