--- a/frontend/public/css/style.css
+++ b/frontend/public/css/style.css
@@ -259,8 +259,46 @@ footer {
   width: 1rem;
 }
 
+/* Polls */
+
+.polls {
+  align-items: center;
+}
+
+.polls a p {
+  color: gray;
+  border-radius: 4px;
+  border: 1px solid #ccc;
+  box-shadow: 0 2px 5px #ccc;
+  min-height: 1.5rem;
+  margin: 0.5rem auto;
+  padding: 0.25rem 0.75rem;
+  width: 80%;
+}
+
 /* Poll */
 
 .poll {
+  padding: 3% 12% 3% 12%;
+  text-align: center;
+}
 
+.poll a {
+  color: gray;
+}
+
+.poll .option input {
+  width: 1rem;
+  height: 1rem;
+  margin: 0 0 0 0;
+}
+
+.poll .option p {
+  border-radius: 4px;
+  border: 1px solid #ccc;
+  box-shadow: 0 2px 5px #ccc;
+  height: 1.5rem;
+  margin: 0.5rem 0.5rem 0.5rem 0;
+  padding: 0.25rem 0.75rem;
+  width: 100%;
 }
