--- a/frontend/public/css/style.css
+++ b/frontend/public/css/style.css
@@ -18,12 +18,13 @@ body {
   background: #efefef;
   box-sizing: border-box;
   margin: 0;
-  min-height: 100%;
+  height: 100%;
   padding: 0;
-  position: relative;
 }
 
 #root {
+	position: relative;
+	min-height: 100%;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
@@ -130,8 +131,8 @@ a:hover {
 .home-section {
   align-items: center;
   display: flex;
-  height: 100%;
-  padding: 3% 12% 3% 12%;
+  height: 80vh;
+  padding: 0% 12% 0% 12%;
 }
 
 .home-left-section {
@@ -158,8 +159,9 @@ a:hover {
 }
 
 .big-heading {
+	color: #1a488e;
   font-size: 3rem;
-  font-weight: 900;
+  font-weight: bold;
   line-height: 1.5;
 }
 
@@ -244,8 +246,8 @@ a:hover {
 /* Footer */
 
 footer {
-  bottom: 0;
-  position: absolute;
+	position: absolute;
+	bottom: 0;
   text-align: center;
   width: 100%;
 }
