--- a/frontend/public/css/style.css
+++ b/frontend/public/css/style.css
@@ -306,7 +306,7 @@ footer {
   border-radius: 4px;
   border: 1px solid #ccc;
   box-shadow: 0 2px 5px #ccc;
-  height: 1.5rem;
+  min-height: 1.5rem;
   margin: 0.5rem 0.5rem 0.5rem 0;
   padding: 0.25rem 0.75rem;
   width: 100%;
