--- a/frontend/public/css/style.css
+++ b/frontend/public/css/style.css
@@ -127,6 +127,43 @@ a:hover {
   }
 }
 
+/* Login/Register */
+
+.login-form {
+  padding: 10% 12% 3% 12%;
+	text-align: center;
+}
+
+.login-input {
+  border-radius: 4px;
+  border: 1px solid #ccc;
+  box-shadow: 0 2px 5px #ccc;
+  height: 2.5rem;
+  padding: 0.25rem 0.75rem;
+  width: 30%;
+	margin: 0 auto;
+	display: block;
+}
+
+.login-button {
+  background-color: var(--orange);
+  border-radius: 3rem;
+  border: none;
+  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.25);
+  color: white;
+  font-size: 1.5rem;
+  font-weight: bold;
+  margin: 2rem auto;
+  padding: 0.75rem 1.5rem;
+  text-decoration: none;
+}
+
+@media (max-width: 750px) {
+	.login-input {
+		width: 60%;
+	}
+}
+
 /* Home Page */
 
 .home-section {
@@ -160,7 +197,7 @@ a:hover {
 }
 
 .big-heading {
-	color: #1a488e;
+	color: rgba(0, 0, 0, 0.801);
   font-size: 3rem;
   font-weight: bold;
   line-height: 1.5;
