--- a/frontend/public/css/style.css
+++ b/frontend/public/css/style.css
@@ -7,6 +7,8 @@
   --blue: #3db2ff;
   --lightpink: #faefef;
   --orange: #ff9718;
+  --error: #fcebe2;
+  --success: #e2fcfc;
 }
 
 html {
@@ -16,7 +18,7 @@ html {
 
 body {
   width: 100%;
-  background: #efefef;
+  background: #f6f8fa;
   box-sizing: border-box;
   margin: 0;
   height: 100%;
@@ -259,7 +261,7 @@ a:hover {
   color: white;
   font-size: 1.5rem;
   font-weight: bold;
-  margin: 0 auto;
+  margin: 1rem auto 2rem auto;
   padding: 0.75rem 1.5rem;
   text-decoration: none;
 }
@@ -293,7 +295,7 @@ a:hover {
 
 .remove {
   align-items: center;
-  background-color: lightgrey;
+  background-color: ddd;
   border-radius: 4px;
   border: none;
   display: flex;
@@ -362,8 +364,8 @@ footer {
 }
 
 .btn-group-btn {
-  border: none;
-  background-color: #fff;
+	color: #24292f;
+  background-color: #f6f8fa;
   width: 4rem;
   height: 2rem;
   border-radius: 0;
@@ -381,7 +383,8 @@ footer {
 }
 
 .clicked {
-  background-color: #cdcdcd;
+	box-shadow: inset 0 0 1px rgba(0, 0, 0, 0.25);
+  background-color: #ddd;
   cursor: default;
 }
 
@@ -411,3 +414,62 @@ footer {
   padding: 0.25rem 0.75rem;
   width: 100%;
 }
+
+/* Error */
+
+.error {
+  color : rgba(194, 11, 11, 0.836);
+  background-color: var(--error);
+  border: 1px solid rgb(143, 34, 27);
+  margin: 0 auto 1rem auto;
+  padding: 1rem;
+  width: 30%;
+  border-radius: 4px;
+}
+
+.error p {
+  display: table;
+  margin: 0 auto;
+  min-height: 1.5rem;
+  text-align: center;
+}
+
+.warning {
+  color: rgb(143, 34, 27);
+  font-size: 1rem;
+  margin-right: 0.5rem;
+}
+
+/* Success */
+
+.success {
+  color: rgb(0, 136, 29);
+  background-color: var(--success);
+  border: 1px solid rgb(8, 102, 28);
+  margin: 0 auto 1rem auto;
+  padding: 1rem;
+  width: 30%;
+}
+
+.success p {
+  display: table;
+  margin: 0 auto;
+  min-height: 1.5rem;
+  text-align: center;
+}
+
+.tick {
+  font-size: 0.8rem;
+  margin-right: 0.5rem;
+}
+
+@media (max-width: 767px) {
+  .error {
+    width: 70%;
+  }
+
+  .success {
+    width: 70%;
+  }
+}
+
