--- a/frontend/public/css/style.css
+++ b/frontend/public/css/style.css
@@ -299,7 +299,7 @@ a:hover {
 	border: 1px solid #ccc;
 	box-shadow: 0 2px 5px #ccc;
 	height: 1.5rem;
-	margin: 0.5rem 0.5rem 0.5rem 0;
+	margin: 0.5rem 0 0.5rem 0;
 	padding: 0.25rem 0.75rem;
 	width: 100%;
 }
@@ -309,6 +309,7 @@ a:hover {
 }
 
 .remove {
+	margin-left: 0.5rem;
 	align-items: center;
 	background-color: ddd;
 	border-radius: 4px;
@@ -359,7 +360,6 @@ footer {
 /* Polls */
 
 .polls {
-	align-items: center;
 }
 
 .polls a p {
@@ -376,6 +376,7 @@ footer {
 .btn-group {
 	display: flex;
 	justify-content: flex-end;
+	margin-top: 0.5rem;
 }
 
 .btn-group-btn {
@@ -408,25 +409,45 @@ footer {
 
 /* Poll */
 
-.poll {
-	padding: 3% 12% 3% 12%;
-	/* text-align: center; */
+.form-body {
+	min-width: 10rem;
+	max-width: 35rem;
+	margin: 1rem auto 2rem auto;
+	padding: 0.75rem 2.2rem;
+	background-color: #fff;
+	box-shadow: 0 2px 5px #cccccc;
+	border-radius: 4px;
 }
 
-.question {
+.poll-question {
+	font-size: 1.25rem;
 }
 
-.poll a {
-	color: gray;
+.poll-option-label {
+	display: flex;
+	align-items: center;
+	margin: 1rem 0;
 }
 
-.poll .option input {
-	width: 1rem;
-	height: 1rem;
-	margin: 0 0 0 0;
+.poll-option-label input {
+	cursor: pointer;
+	margin: 0 1rem 0 0;
+	height: 1.1rem;
+	width: 1.1rem;
+	/* color: var(--orange); */
 }
 
-.poll .option p {
+.poll-option-label input:checked {
+	background-color: var(--orange);
+}
+
+.poll-option-label p {
+	margin: 0;
+	color: #202124;
+}
+
+/*
+.poll .poll-option p {
 	background-color: #fff;
 	border-radius: 4px;
 	border: 1px solid #ccc;
@@ -435,6 +456,12 @@ footer {
 	min-height: 1.5rem;
 	padding: 0.25rem 0.75rem;
 	width: 30%;
+} */
+
+@media (max-width: 750px) {
+	.form-body {
+		/* width: 15rem; */
+	}
 }
 
 /* Error */
@@ -489,7 +516,7 @@ footer {
 	margin-right: 0.5rem;
 }
 
-@media (max-width: 767px) {
+@media (max-width: 750px) {
 	.error {
 		width: 70%;
 	}
