--- a/frontend/public/css/style.css
+++ b/frontend/public/css/style.css
@@ -1,449 +1,515 @@
 :focus {
-	outline: none;
+  outline: none;
 }
 
 :root {
-	--blue-link: #1769e0;
-	--blue: #3db2ff;
-	--error: #fcebe2;
-	--lightpink: #faefef;
-	--orange: #ff9718;
-	--success: #e2fcfc;
+  --blue-link: #1769e0;
+  --blue: #3db2ff;
+  --error: #fcebe2;
+  --lightpink: #faefef;
+  --orange: #ff9718;
+  --success: #e2fcfc;
 }
 
 html {
-	height: 100%;
-	width: 100%;
+  height: 100%;
+  width: 100%;
 }
 
 body {
-	background: #f6f8fa;
-	box-sizing: border-box;
-	height: 100%;
-	margin: 0;
-	padding: 0;
-	width: 100%;
+  background: #f6f8fa;
+  box-sizing: border-box;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  width: 100%;
 }
 
 #root {
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-		Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-	min-height: 100%;
-	position: relative;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  min-height: 100%;
+  position: relative;
 }
 
 button {
-	cursor: pointer;
-	display: block;
+  cursor: pointer;
+  display: block;
+}
+
+p {
+  margin: 0;
 }
 
 a,
 a:hover {
-	text-decoration: none;
+  text-decoration: none;
 }
 
 /* NavBar */
 
 .navbar {
-	align-items: center;
-	background: linear-gradient(45deg, var(--orange), var(--blue)) no-repeat;
-	box-shadow: 0 1px 4px rgba(0, 0, 0, 0.25);
-	display: flex;
-	justify-content: space-between;
-	padding: 1rem 3rem;
-	position: relative;
+  align-items: center;
+  background: linear-gradient(45deg, var(--orange), var(--blue)) no-repeat;
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.25);
+  display: flex;
+  justify-content: space-between;
+  padding: 1rem 3rem;
+  position: relative;
 }
 
 .logo {
-	color: white;
-	font-family: "Ubuntu", sans-serif;
-	font-size: 2.5rem;
-	font-weight: bold;
+  color: white;
+  font-family: "Ubuntu", sans-serif;
+  font-size: 2.5rem;
+  font-weight: bold;
 }
 
 .nav-list {
-	display: flex;
-	margin: 0;
-	padding: 0;
+  display: flex;
+  margin: 0;
+  padding: 0;
 }
 
 .nav-item {
-	list-style: none;
+  list-style: none;
 }
 
 .nav-item a {
-	border-radius: 2rem;
-	border: none;
-	color: white;
-	display: block;
-	margin: 0 1rem;
-	padding: 0.5rem 1rem;
-	text-decoration: none;
+  border-radius: 2rem;
+  border: none;
+  color: white;
+  display: block;
+  margin: 0 1rem;
+  padding: 0.5rem 1rem;
+  text-decoration: none;
 }
 
 .nav-item a:hover,
 .nav-item .active {
-	background-color: white;
-	color: var(--blue-link);
+  background-color: white;
+  color: var(--blue-link);
 }
 
 .user {
-	align-items: center;
-	background-color: white;
-	border-radius: 2rem;
-	border: none;
-	color: var(--orange);
-	display: flex;
-	justify-content: center;
-	margin: 0 1rem;
-	min-width: 5rem;
-	padding: 0.5rem 1rem;
-	text-decoration: none;
+  align-items: center;
+  background-color: white;
+  border-radius: 2rem;
+  border: none;
+  color: var(--orange);
+  display: flex;
+  justify-content: center;
+  margin: 0 1rem;
+  min-width: 5rem;
+  padding: 0.5rem 1rem;
+  text-decoration: none;
 }
 
 .hamburger {
-	display: none;
+  display: none;
 }
 
 @media (max-width: 750px) {
-	.logo {
-		margin: 1rem 1rem;
-	}
+  .logo {
+    margin: 1rem 1rem;
+  }
 
-	.hamburger {
-		color: white;
-		display: block;
-		font-size: 2.5rem;
-		position: absolute;
-		right: 1rem;
-		top: 1.25rem;
-	}
+  .hamburger {
+    color: white;
+    display: block;
+    font-size: 2.5rem;
+    position: absolute;
+    right: 1rem;
+    top: 1.25rem;
+  }
 
-	.navbar {
-		align-items: flex-start;
-		flex-direction: column;
-		padding: 0;
-	}
+  .navbar {
+    align-items: flex-start;
+    flex-direction: column;
+    padding: 0;
+  }
 
-	.nav-list {
-		display: none;
-		flex-direction: column;
-		text-align: center;
-		width: 100%;
-	}
+  .nav-list {
+    display: none;
+    flex-direction: column;
+    text-align: center;
+    width: 100%;
+  }
 
-	.nav-item a {
-		border-radius: 0;
-		margin: 0;
-		padding: 0.5rem 0;
-		width: 100%;
-	}
+  .nav-item a {
+    border-radius: 0;
+    margin: 0;
+    padding: 0.5rem 0;
+    width: 100%;
+  }
 
-	.navbar-toggle {
-		display: flex;
-	}
+  .navbar-toggle {
+    display: flex;
+  }
 
-	.user {
-		margin: 0 auto;
-		max-width: 10rem;
-	}
+  .user {
+    margin: 0 auto;
+    max-width: 10rem;
+  }
 }
 
 /* Login/Register */
 
 .container {
-	padding: 1.5% 12% 3% 12%;
+  padding: 1.5% 12% 5% 12%;
 }
 
 .login-page {
-	text-align: center;
+  text-align: center;
 }
 
 .login-page a {
-	color: var(--blue-link);
+  color: var(--blue-link);
 }
 
 .login-form {
-	align-items: center;
-	display: flex;
-	flex-direction: column;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
 }
 
 .login-input {
-	border: 1px solid #ccc;
-	box-shadow: 0 2px 5px #ccc;
-	display: block;
-	height: 2.5rem;
-	padding: 0.25rem 0.75rem;
-	width: 18rem;
+  border: 1px solid #ccc;
+  box-shadow: 0 2px 5px #ccc;
+  display: block;
+  height: 2.5rem;
+  padding: 0.25rem 0.75rem;
+  width: 18rem;
 }
 
 .login-input:focus {
-	box-shadow: 0 0 1px 2px rgb(52, 174, 255, 0.5);
-	position: relative;
+  box-shadow: 0 0 1px 2px rgb(52, 174, 255, 0.5);
+  position: relative;
 }
 
 .login-input-top {
-	border-top-left-radius: 6px;
-	border-top-right-radius: 6px;
+  border-top-left-radius: 6px;
+  border-top-right-radius: 6px;
 }
 
 .login-input-bottom {
-	border-bottom-left-radius: 6px;
-	border-bottom-right-radius: 6px;
+  border-bottom-left-radius: 6px;
+  border-bottom-right-radius: 6px;
+  margin-bottom: 1rem;
 }
 
 .login-button {
-	background-color: var(--orange);
-	border-radius: 3rem;
-	border: none;
-	box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.25);
-	color: white;
-	font-size: 1.5rem;
-	font-weight: bold;
-	margin: 1rem auto;
-	padding: 0.75rem 1.5rem;
-	text-decoration: none;
+  background-color: var(--orange);
+  border-radius: 3rem;
+  border: none;
+  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.25);
+  color: white;
+  font-size: 1.5rem;
+  font-weight: bold;
+  margin: 1rem auto;
+  padding: 0.75rem 1.5rem;
+  text-decoration: none;
 }
 
 /* Home Page */
 
 .home-section {
-	align-items: center;
-	display: flex;
-	height: 80vh;
-	padding: 0% 12% 0% 12%;
+  align-items: center;
+  display: flex;
+  height: 80vh;
+  padding: 0% 12% 0% 12%;
 }
 
 .home-left-section {
-	width: 50%;
+  width: 50%;
 }
 
 .home-right-section {
-	align-items: center;
-	display: flex;
-	justify-content: center;
-	width: 50%;
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  width: 50%;
 }
 
 .create-button {
-	background-color: var(--orange);
-	border-radius: 3rem;
-	border: none;
-	box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.25);
-	color: white;
-	font-size: 2rem;
-	font-weight: bold;
-	margin-bottom: 1rem;
-	padding: 1rem 2rem;
-	text-decoration: none;
+  background-color: var(--orange);
+  border-radius: 3rem;
+  border: none;
+  box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.25);
+  color: white;
+  font-size: 2rem;
+  font-weight: bold;
+  margin-bottom: 1rem;
+  padding: 1rem 2rem;
+  text-decoration: none;
 }
 
 .big-heading {
-	color: rgba(0, 0, 0, 0.801);
-	font-size: 3rem;
-	font-weight: bold;
-	line-height: 1.5;
+  color: rgba(0, 0, 0, 0.801);
+  font-size: 3rem;
+  font-weight: bold;
+  line-height: 1.5;
 }
 
 @media (max-width: 750px) {
-	.home-section {
-		flex-direction: column;
-		text-align: center;
-	}
+  .home-section {
+    flex-direction: column;
+    text-align: center;
+  }
 
-	.home-left-section,
-	.home-right-section {
-		width: 100%;
-	}
+  .home-left-section,
+  .home-right-section {
+    width: 100%;
+  }
 }
 
 /* Create Poll */
 .create-form {
-	padding: 3% 12% 7% 12%;
+  padding: 3% 12% 7% 12%;
 }
 
 .create-label {
-	font-weight: bold;
-	margin: 1rem 0 0 0;
+  font-weight: bold;
+  margin: 1rem 0 0 0;
 }
 
 .submit {
-	background-color: var(--orange);
-	border-radius: 3rem;
-	border: none;
-	box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.25);
-	color: white;
-	font-size: 1.5rem;
-	font-weight: bold;
-	margin: 1rem auto 2rem auto;
-	padding: 0.75rem 1.5rem;
-	text-decoration: none;
+  background-color: var(--orange);
+  border-radius: 3rem;
+  border: none;
+  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.25);
+  color: white;
+  font-size: 1.5rem;
+  font-weight: bold;
+  margin: 1rem auto 2rem auto;
+  padding: 0.75rem 1.5rem;
+  text-decoration: none;
 }
 
 .add {
-	background-color: var(--orange);
-	border-radius: 3rem;
-	border: none;
-	box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.25);
-	color: white;
-	font-size: 0.75rem;
-	font-weight: bold;
-	margin: 1rem 0;
-	padding: 0.75rem 1.5rem;
-	text-decoration: none;
+  background-color: var(--orange);
+  border-radius: 3rem;
+  border: none;
+  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.25);
+  color: white;
+  font-size: 0.75rem;
+  font-weight: bold;
+  margin: 1rem 0;
+  padding: 0.75rem 1.5rem;
+  text-decoration: none;
 }
 
 .create-form input {
-	border-radius: 4px;
-	border: 1px solid #ccc;
-	box-shadow: 0 2px 5px #ccc;
-	height: 1.5rem;
-	margin: 0.5rem 0 0.5rem 0;
-	padding: 0.25rem 0.75rem;
-	width: 100%;
+  border-radius: 4px;
+  border: 1px solid #ccc;
+  box-shadow: 0 2px 5px #ccc;
+  height: 1.5rem;
+  margin: 0.5rem 0 0.5rem 0;
+  padding: 0.25rem 0.75rem;
+  width: 100%;
 }
 
 .option input {
-	width: 50%;
+  width: 50%;
 }
 
 .remove {
-	margin-left: 0.5rem;
-	align-items: center;
-	background-color: ddd;
-	border-radius: 4px;
-	border: none;
-	display: flex;
-	height: 2rem;
-	justify-content: center;
-	width: 2rem;
+  margin-left: 0.5rem;
+  align-items: center;
+  background-color: #ddd;
+  border-radius: 4px;
+  border: none;
+  display: flex;
+  height: 2rem;
+  justify-content: center;
+  width: 2rem;
 }
 
 .option {
-	align-items: center;
-	display: flex;
+  align-items: center;
+  display: flex;
 }
 
 /* Stats */
-.stats {
-	height: 70vh;
-	padding: 0 10%;
-	position: relative;
+.chart-container {
+  height: 70vh;
+  padding: 0 10%;
+  position: relative;
 }
 
 /* Footer */
 
 footer {
-	bottom: 0;
-	position: absolute;
-	text-align: center;
-	width: 100%;
+  bottom: 0;
+  position: absolute;
+  text-align: center;
+  width: 100%;
+  color: rgb(138, 138, 138);
 }
 
 /* Loader */
 
 .loader {
-	background: url(../images/load.gif) no-repeat;
-	background-size: contain; /* Must be after background */
-	bottom: 0;
-	height: 75px;
-	left: 0;
-	margin: 50vh auto;
-	opacity: 0.5;
-	position: absolute;
-	right: 0;
-	top: 0;
-	width: 75px;
+  background: url(../images/load.gif) no-repeat;
+  background-size: contain; /* Must be after background */
+  bottom: 0;
+  height: 75px;
+  left: 0;
+  margin: 50vh auto;
+  opacity: 0.5;
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 75px;
 }
 
 /* Polls */
 
 .polls {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.polls a p {
-	border-radius: 4px;
-	border: 1px solid #ccc;
-	box-shadow: 0 2px 5px #ccc;
-	color: gray;
-	margin: 0.5rem auto;
-	min-height: 1.5rem;
-	padding: 0.25rem 0.75rem;
-	width: 50%;
+.poll-link {
+  color: black;
+  background-color: #fff;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-radius: 4px;
+  box-shadow: 0 2px 5px #ccc;
+  margin: 0.5rem 0;
+  /* min-width: 10rem;
+	max-width: 35rem; */
+  width: 60%;
+  padding: 0.75rem 1.25rem;
 }
+
+.poll-content {
+  flex-basis: 75%;
+}
+
+.author {
+  color: rgb(138, 138, 138);
+  font-size: 0.85rem;
+}
+
+.myPoll-list-item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 65%;
+  margin: 0.5rem 0;
+}
+
+.myPoll-link {
+  padding: 0.75rem 1.25rem;
+  flex-grow: 1;
+  color: black;
+  background-color: #fff;
+  border-radius: 4px;
+  box-shadow: 0 2px 5px #ccc;
+}
+
+/* .myPoll-content {
+} */
+
+@media (max-width: 750px) {
+  .myPoll-list-item {
+    width: 100%;
+  }
+
+  .poll-link {
+    width: 80%;
+  }
+}
+
+/* Button Group */
 
 .btn-group {
-	display: flex;
-	justify-content: flex-end;
-	margin-top: 0.5rem;
+  display: flex;
+  justify-content: flex-end;
+  margin: 0.5rem 0 1rem 0;
 }
 
 .btn-group-btn {
-	align-items: center;
-	background-color: #f6f8fa;
-	border-radius: 0;
-	border: 1px solid #ccc;
-	color: #24292f;
-	display: flex;
-	height: 2rem;
-	justify-content: center;
-	width: 4rem;
+  align-items: center;
+  background-color: #f6f8fa;
+  border-radius: 0;
+  border: 1px solid #cccbcc;
+  color: #24292f;
+  display: flex;
+  height: 2rem;
+  justify-content: center;
+  width: 4rem;
 }
 
 .left-btn {
-	border-bottom-left-radius: 4px;
-	border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px;
+  border-top-left-radius: 4px;
 }
 
 .right-btn {
-	border-bottom-right-radius: 4px;
-	border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
+  border-top-right-radius: 4px;
 }
 
 .clicked {
-	background-color: #ddd;
-	box-shadow: inset 0 0 1px rgba(0, 0, 0, 0.25);
-	cursor: default;
+  background-color: #ddd;
+  box-shadow: inset 0 0 1px rgba(0, 0, 0, 0.25);
+  cursor: default;
 }
 
 /* Poll */
 
+.stats-btn {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  background-color: var(--orange);
+  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.25);
+  color: white;
+  padding: 0.4rem 0.75rem;
+  /* font-weight: bold; */
+  border-radius: 4px;
+}
+
 .form-body {
-	min-width: 10rem;
-	max-width: 35rem;
-	margin: 1rem auto 2rem auto;
-	padding: 0.75rem 2.2rem;
-	background-color: #fff;
-	box-shadow: 0 2px 5px #cccccc;
-	border-radius: 4px;
+  min-width: 10rem;
+  max-width: 35rem;
+  margin: 1rem auto 2rem auto;
+  padding: 1.5rem 2.2rem 1rem;
+  background-color: #fff;
+  box-shadow: 0 2px 5px #cccccc;
+  border-radius: 4px;
 }
 
 .poll-question {
-	font-size: 1.25rem;
+  font-size: 1.25rem;
+  margin-bottom: 2.5rem;
 }
 
 .poll-option-label {
-	display: flex;
-	align-items: center;
-	margin: 1rem 0;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  margin: 1rem 0;
 }
 
 .poll-option-label input {
-	cursor: pointer;
-	margin: 0 1rem 0 0;
-	height: 1.1rem;
-	width: 1.1rem;
-	/* color: var(--orange); */
+  cursor: pointer;
+  margin: 0 1rem 0 0;
+  height: 1.1rem;
+  width: 1.1rem;
 }
 
 .poll-option-label input:checked {
-	background-color: var(--orange);
+  background-color: var(--orange);
 }
 
 .poll-option-label p {
-	margin: 0;
-	color: #202124;
+  color: #202124;
 }
 
 /*
@@ -458,70 +524,76 @@ footer {
 	width: 30%;
 } */
 
-@media (max-width: 750px) {
-	.form-body {
-		/* width: 15rem; */
-	}
-}
-
 /* Error */
 
 .error {
-	background-color: var(--error);
-	border-radius: 4px;
-	border: 1px solid rgb(143, 34, 27);
-	color: rgba(194, 11, 11, 0.836);
-	margin: 0 auto 1rem auto;
-	padding: 1rem;
-	width: 30%;
+  background-color: var(--error);
+  border-radius: 4px;
+  border: 1px solid rgb(143, 34, 27);
+  color: rgba(194, 11, 11, 0.836);
+  margin: 0 auto 1rem auto;
+  padding: 1rem;
+  width: 30%;
 }
 
 .error p {
-	align-items: center;
-	display: flex;
-	justify-content: center;
-	margin: 0;
-	min-height: 1.5rem;
-	text-align: center;
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  min-height: 1.5rem;
+  text-align: center;
 }
 
 .warning {
-	color: rgb(143, 34, 27);
-	font-size: 1rem;
-	margin-right: 0.5rem;
+  color: rgb(143, 34, 27);
+  font-size: 1rem;
+  margin-right: 0.5rem;
 }
 
 /* Success */
 
 .success {
-	color: rgb(0, 136, 29);
-	background-color: var(--success);
-	border: 1px solid rgb(8, 102, 28);
-	margin: 0 auto 1rem auto;
-	padding: 1rem;
-	width: 30%;
+  color: rgb(0, 136, 29);
+  background-color: var(--success);
+  border: 1px solid rgb(8, 102, 28);
+  margin: 0 auto 1rem auto;
+  padding: 1rem;
+  width: 30%;
 }
 
 .success p {
-	align-items: center;
-	display: flex;
-	justify-content: center;
-	margin: 0;
-	min-height: 1.5rem;
-	text-align: center;
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  min-height: 1.5rem;
+  text-align: center;
 }
 
 .tick {
-	font-size: 0.8rem;
-	margin-right: 0.5rem;
+  font-size: 0.8rem;
+  margin-right: 0.5rem;
 }
 
 @media (max-width: 750px) {
-	.error {
-		width: 70%;
-	}
+  .error {
+    width: 70%;
+  }
 
-	.success {
-		width: 70%;
-	}
+  .success {
+    width: 70%;
+  }
+}
+
+/* Not Found */
+.not-found-page {
+  text-align: center;
+}
+
+.not-found-message {
+  font-size: 3rem;
+  margin-bottom: 4rem;
+}
+
+.not-found-img {
+  font-size: 8rem;
 }
